# vex

./: .gitignore  Cargo.toml  README.md  docent.config.json  install-skill.sh  plan.md  test-commands.md
.claude/skills/docent/: SKILL.md
.claude/skills/docent/modes/: digest.md  init.md  release.md  suggest.md  triage.md  update.md
.claude/skills/docent/prompts/: journal-system.md  overview-system.md  status-system.md  theme-system.md  tone-presets.md
.claude/skills/docent/schemas/: config.schema.json  frontmatter.schema.json  status.schema.json  theme.schema.json
.claude/skills/vex/: SKILL.md
.github/workflows/: docent-deploy.yml
docs/: package-lock.json  package.json  tsconfig.json
docs/content/: changelog.mdx  overview.mdx  status.json  theme.json
docs/content/journal/: 2026-04-14-first-week-shape.mdx  2026-04-19-inaugural.mdx
docs/src/components/: Footer.astro  Header.astro  JournalCard.astro
docs/src/layouts/: BaseLayout.astro
docs/src/pages/: changelog.astro  report-bug.astro  request-feature.astro  status.astro
docs/src/pages/journal/: [slug].astro  index.astro
docs/src/styles/: global.css
docs/src/styles/vibes/: clinical.css  expressive.css
scripts/: export_model.py
src/: download.rs  main.rs  walk.rs
src/cache/: embeddings.rs  mod.rs
src/chunk/: mod.rs  naive.rs  prose.rs  treesitter.rs
src/embed/: mod.rs  onnx.rs
src/output/: mod.rs
src/search/: bm25.rs  dedup.rs  discover.rs  mod.rs  rrf.rs
src/sync/: mod.rs
src/sync/github/: api.rs  auth.rs  detect.rs  mod.rs  render.rs  state.rs
(+9 files in other folders)
